# PyTrengo

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ci.sh  pyproject.toml
.github/workflows/: build.yml  publish.yml
tests/: test_helpers.py
trengo/: __init__.py
