[tool.poetry]
name = "pytrengo"
version = "0.1.0-alpha1"
description = ""
authors = ["Baptiste Fontaine <baptiste@bixoto.com>"]
include = ["trengo/py.typed"]
readme = "README.md"
packages = [
    { include = "trengo" },
]
classifiers = [
    'License :: OSI Approved :: MIT License',
    "Development Status :: 3 - Alpha",
    'Programming Language :: Python :: 3',
]

[tool.poetry.dependencies]
python = "^3.10"
api-session = "^1.4.1"
python-dotenv = "^1.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1"
pytest = "^8"
pytest-cov = "^5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
